--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ author_email = magnus@glesys.se
 maintainer = Magnus Johansson
 maintainer_email = magnus@glesys.se
 license = MIT
-license_file = LICENSE
+license_files = LICENSE
 classifiers =
     Development Status :: 3 - Alpha
     Environment :: Console
