Switch from private repo to ansible-galaxy collection

--- a/molecule_glesys/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/collections.yml
+++ b/molecule_glesys/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/collections.yml
@@ -1,4 +1,3 @@
 collections:
-  - name: git@gitlab.glesys.io:magnus/ansible-glesys.git
-    type: git
-    version: main
+  - name: glesys.cloud
+    version: 0.0.1
