--- a/molecule_glesys/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/handlers/main.yml
+++ b/molecule_glesys/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 {% raw -%}
 - name: Populate instance config dict for linux
-  set_fact:
+  ansible.builtin.set_fact:
     instance_conf_dict: {
       'instance': "{{ instance_info.item.item.name }}",
       'address': "{{ instance_info.server.ipaddress }}",
@@ -15,17 +15,17 @@
   register: instance_config_dict
 
 - name: Convert instance config dict to a list
-  set_fact:
+  ansible.builtin.set_fact:
     instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
 
 - name: Dump instance config
-  copy:
+  ansible.builtin.copy:
     content: "{{ instance_conf | to_json | from_json | to_yaml }}"
     dest: "{{ molecule_instance_config }}"
     mode: 0644
 
 - name: Wait for SSH
-  wait_for:
+  ansible.builtin.wait_for:
     port: "{{ item.port }}"
     host: "{{ item.address }}"
     search_regex: SSH
