--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ setup_requires =
 
 # These are required in actual runtime:
 install_requires =
-    molecule >= 3.2.0
+    molecule >= 4.0.1
     pyyaml >= 5.1, < 6
 
 [options.extras_require]
@@ -54,7 +54,7 @@ test =
 
 [options.entry_points]
 molecule.driver =
-    glesys = molecule_glesys.driver:GleSYS
+    molecule-glesys = molecule_glesys.driver:GleSYS
 
 [options.packages.find]
 where = .
