Change driver name to molecule-glesys to make comaptible with molecule > 4 (#2)
* Change driver name to molecule-glesys

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ test =
 
 [options.entry_points]
 molecule.driver =
-    glesys = molecule_glesys.driver:GleSYS
+    molecule-glesys = molecule_glesys.driver:GleSYS
 
 [options.packages.find]
 where = .
