--- a/setup.cfg
+++ b/setup.cfg
@@ -45,8 +45,8 @@ setup_requires =
 
 # These are required in actual runtime:
 install_requires =
-    molecule >= 3.2.0
-    pyyaml >= 5.1, < 6
+    molecule >= 24.6.0
+    pyyaml >= 6.0.1
 
 [options.extras_require]
 test =
